Cta Text wrapping IE fix

--- a/css/main.css
+++ b/css/main.css
@@ -177,11 +177,19 @@ Font styles
       background: #444;
 }
 
+.ctaSection{
+	width: 100%;
+	-webkit-flex: 1 1 auto;
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+}
+
 .ctaText {
       font-family: 'Dancing Script', cursive;
       font-weight:700;
       font-size: 2.5em;
 	margin-bottom: 20px;
+	max-width: 100%;
 	text-align: center;
 	text-shadow: 2px 2px rgba(25, 24, 24, 0.5);
 }
